Assume stoping vm_concierge succeeds if we get an empty response

Currently, we assume that debugd sends back a boolean success/fail
value in the response when asked to shutdown vm_concierge, but in fact
the response is empty, resulting in spurious error messages. This CL
changes this behaviour to assume success when receving any response,
including an empty one.

Bug: 900841
Change-Id: I04682973c6dc9d190d43c1626c9b4e05cfa35484
Reviewed-on: https://chromium-review.googlesource.com/c/1312140
Commit-Queue: Fergus Dall <sidereal@google.com>
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>
Reviewed-by: Nicholas Verne <nverne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606284}
Former-commit-id: 93f66e0ee4f1b90c9a1c4e6a6754ba4b779be93d